// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init golden — polyglot (rust,typescript) > scaffolds per-language check files + the polyglot recipe slug list > poly/example-check-rust.mjs 1`] = `
"// Example fitness check.
//
// Edit this file or add new .mjs files to opensip-cli/fit/checks/.
// Files in this directory are auto-loaded on the next \`opensip fit\` run.
//
// This demo flags any file containing the literal \`EXAMPLE_TODO\`. After
// you confirm the wiring works, delete or replace it with a real check.
//
// Docs: https://github.com/opensip-ai/opensip-cli#authoring-a-check-package
import { readdir, readFile } from 'node:fs/promises';
import { join } from 'node:path';

const CHECK_ID = 'b4f2e9d5-8c3e-4a6b-9f7d-8e2b3c4d5e6f';
const CHECK_SLUG = 'example-check-rust';
const CHECK_DESCRIPTION = 'Demo check — flags any file containing the literal EXAMPLE_TODO';
const CHECK_SCOPE = { languages: ['rust'], concerns: ['backend'] };
const CHECK_TAGS = ['example'];
const SKIP_DIRS = new Set([
  '.git',
  '.hg',
  '.svn',
  '.turbo',
  '.next',
  'build',
  'coverage',
  'dist',
  'node_modules',
  'opensip-cli',
]);
const SOURCE_EXTENSIONS = [
  '.c',
  '.cc',
  '.cpp',
  '.cxx',
  '.go',
  '.java',
  '.js',
  '.jsx',
  '.mjs',
  '.py',
  '.rs',
  '.ts',
  '.tsx',
];

function normalizePath(filePath) {
  return filePath.replaceAll(String.fromCharCode(92), '/');
}

function hasSourceExtension(filePath) {
  return SOURCE_EXTENSIONS.some((extension) => filePath.endsWith(extension));
}

function projectPluginRoot(cwd) {
  return normalizePath(cwd).replace(/\\/+$/, '') + '/opensip-cli/';
}

function isCandidateFile(filePath, cwd) {
  const normalized = normalizePath(filePath);
  return !normalized.startsWith(projectPluginRoot(cwd)) && hasSourceExtension(normalized);
}

async function walkFiles(dir, cwd = dir) {
  const entries = await readdir(dir, { withFileTypes: true }).catch(() => []);
  const files = [];
  for (const entry of entries) {
    const fullPath = join(dir, entry.name);
    if (entry.isDirectory()) {
      if (SKIP_DIRS.has(entry.name)) continue;
      files.push(...(await walkFiles(fullPath, cwd)));
    } else if (entry.isFile() && isCandidateFile(fullPath, cwd)) {
      files.push(fullPath);
    }
  }
  return files;
}

function hashString(value) {
  let hash = 0;
  for (let i = 0; i < value.length; i += 1) {
    hash = (hash * 31 + value.charCodeAt(i)) >>> 0;
  }
  return hash.toString(36);
}

function warningSignal(filePath, line) {
  return {
    id: 'sig_' + hashString(CHECK_ID + filePath + String(line)),
    source: 'fitness',
    provider: 'opensip-cli',
    severity: 'medium',
    category: 'quality',
    ruleId: 'fit:' + CHECK_SLUG,
    message: 'Found the example trigger string.',
    suggestion:
      'This is just a demo. Delete this scaffolded example check once you have your own checks.',
    filePath,
    line,
    code: { file: filePath, line },
    metadata: { checkSlug: CHECK_SLUG, checkTags: CHECK_TAGS.join(',') },
    createdAt: new Date().toISOString(),
  };
}

async function analyzeFiles(files, read, signal) {
  const findings = [];
  for (const filePath of files) {
    if (signal?.aborted) throw new Error('Check aborted');
    const content = await read(filePath).catch(() => '');
    const index = content.indexOf('EXAMPLE_TODO');
    if (index < 0) continue;
    findings.push(warningSignal(filePath, content.slice(0, index).split('\\n').length));
  }
  return findings;
}

function result(signals, totalItems, durationMs) {
  const errors = signals.filter((s) => s.severity === 'critical' || s.severity === 'high').length;
  const warnings = signals.filter((s) => s.severity === 'medium').length;
  return {
    passed: errors === 0,
    errors,
    warnings,
    signals,
    info: {
      label: signals.length === 0 ? 'No EXAMPLE_TODO markers' : String(signals.length) + ' EXAMPLE_TODO marker(s)',
    },
    metadata: {
      totalItems,
      signals,
      durationMs,
      filesScanned: totalItems,
      itemType: 'files',
    },
  };
}

function emptyMatcher(cwd) {
  return {
    cwd,
    includePatterns: [],
    excludePatterns: [],
    files: async () => [],
    match: async () => ({ files: [], excluded: [], durationMs: 0 }),
    matches: () => false,
    withExcludes: () => emptyMatcher(cwd),
    typescriptOnly: () => emptyMatcher(cwd),
    noTests: () => emptyMatcher(cwd),
  };
}

const exampleCheck = {
  config: {
    id: CHECK_ID,
    slug: CHECK_SLUG,
    tags: CHECK_TAGS,
    description: CHECK_DESCRIPTION,
    analysisMode: 'analyze',
    scope: { include: [], exclude: [], description: 'target-based scope' },
    itemType: 'files',
    scansFiles: true,
    checkScope: CHECK_SCOPE,
    execute: async (ctx) => {
      const start = Date.now();
      const files = (await ctx.matchFiles()).filter((filePath) => isCandidateFile(filePath, ctx.cwd));
      const signals = await analyzeFiles(files, (filePath) => ctx.readFile(filePath), ctx.signal);
      return result(signals, files.length, Date.now() - start);
    },
  },
  getScope: () => ({ include: [], exclude: [], description: 'target-based scope' }),
  getMatcher: (cwd) => emptyMatcher(cwd),
  run: async (cwd, options = {}) => {
    const start = Date.now();
    const files = (options.targetFiles ? [...options.targetFiles] : await walkFiles(cwd)).filter(
      (filePath) => isCandidateFile(filePath, cwd),
    );
    const signals = await analyzeFiles(files, (filePath) => readFile(filePath, 'utf8'), options.signal);
    return result(signals, files.length, Date.now() - start);
  },
};

export const checks = [exampleCheck];
"
`;

exports[`init golden — polyglot (rust,typescript) > scaffolds per-language check files + the polyglot recipe slug list > poly/example-check-typescript.mjs 1`] = `
"// Example fitness check.
//
// Edit this file or add new .mjs files to opensip-cli/fit/checks/.
// Files in this directory are auto-loaded on the next \`opensip fit\` run.
//
// This demo flags any file containing the literal \`EXAMPLE_TODO\`. After
// you confirm the wiring works, delete or replace it with a real check.
//
// Docs: https://github.com/opensip-ai/opensip-cli#authoring-a-check-package
import { readdir, readFile } from 'node:fs/promises';
import { join } from 'node:path';

const CHECK_ID = 'a3e1f8c4-9b2d-4f5a-8e6c-7d1a2b3c4d5e';
const CHECK_SLUG = 'example-check-typescript';
const CHECK_DESCRIPTION = 'Demo check — flags any file containing the literal EXAMPLE_TODO';
const CHECK_SCOPE = { languages: ['typescript'], concerns: ['backend'] };
const CHECK_TAGS = ['example'];
const SKIP_DIRS = new Set([
  '.git',
  '.hg',
  '.svn',
  '.turbo',
  '.next',
  'build',
  'coverage',
  'dist',
  'node_modules',
  'opensip-cli',
]);
const SOURCE_EXTENSIONS = [
  '.c',
  '.cc',
  '.cpp',
  '.cxx',
  '.go',
  '.java',
  '.js',
  '.jsx',
  '.mjs',
  '.py',
  '.rs',
  '.ts',
  '.tsx',
];

function normalizePath(filePath) {
  return filePath.replaceAll(String.fromCharCode(92), '/');
}

function hasSourceExtension(filePath) {
  return SOURCE_EXTENSIONS.some((extension) => filePath.endsWith(extension));
}

function projectPluginRoot(cwd) {
  return normalizePath(cwd).replace(/\\/+$/, '') + '/opensip-cli/';
}

function isCandidateFile(filePath, cwd) {
  const normalized = normalizePath(filePath);
  return !normalized.startsWith(projectPluginRoot(cwd)) && hasSourceExtension(normalized);
}

async function walkFiles(dir, cwd = dir) {
  const entries = await readdir(dir, { withFileTypes: true }).catch(() => []);
  const files = [];
  for (const entry of entries) {
    const fullPath = join(dir, entry.name);
    if (entry.isDirectory()) {
      if (SKIP_DIRS.has(entry.name)) continue;
      files.push(...(await walkFiles(fullPath, cwd)));
    } else if (entry.isFile() && isCandidateFile(fullPath, cwd)) {
      files.push(fullPath);
    }
  }
  return files;
}

function hashString(value) {
  let hash = 0;
  for (let i = 0; i < value.length; i += 1) {
    hash = (hash * 31 + value.charCodeAt(i)) >>> 0;
  }
  return hash.toString(36);
}

function warningSignal(filePath, line) {
  return {
    id: 'sig_' + hashString(CHECK_ID + filePath + String(line)),
    source: 'fitness',
    provider: 'opensip-cli',
    severity: 'medium',
    category: 'quality',
    ruleId: 'fit:' + CHECK_SLUG,
    message: 'Found the example trigger string.',
    suggestion:
      'This is just a demo. Delete this scaffolded example check once you have your own checks.',
    filePath,
    line,
    code: { file: filePath, line },
    metadata: { checkSlug: CHECK_SLUG, checkTags: CHECK_TAGS.join(',') },
    createdAt: new Date().toISOString(),
  };
}

async function analyzeFiles(files, read, signal) {
  const findings = [];
  for (const filePath of files) {
    if (signal?.aborted) throw new Error('Check aborted');
    const content = await read(filePath).catch(() => '');
    const index = content.indexOf('EXAMPLE_TODO');
    if (index < 0) continue;
    findings.push(warningSignal(filePath, content.slice(0, index).split('\\n').length));
  }
  return findings;
}

function result(signals, totalItems, durationMs) {
  const errors = signals.filter((s) => s.severity === 'critical' || s.severity === 'high').length;
  const warnings = signals.filter((s) => s.severity === 'medium').length;
  return {
    passed: errors === 0,
    errors,
    warnings,
    signals,
    info: {
      label: signals.length === 0 ? 'No EXAMPLE_TODO markers' : String(signals.length) + ' EXAMPLE_TODO marker(s)',
    },
    metadata: {
      totalItems,
      signals,
      durationMs,
      filesScanned: totalItems,
      itemType: 'files',
    },
  };
}

function emptyMatcher(cwd) {
  return {
    cwd,
    includePatterns: [],
    excludePatterns: [],
    files: async () => [],
    match: async () => ({ files: [], excluded: [], durationMs: 0 }),
    matches: () => false,
    withExcludes: () => emptyMatcher(cwd),
    typescriptOnly: () => emptyMatcher(cwd),
    noTests: () => emptyMatcher(cwd),
  };
}

const exampleCheck = {
  config: {
    id: CHECK_ID,
    slug: CHECK_SLUG,
    tags: CHECK_TAGS,
    description: CHECK_DESCRIPTION,
    analysisMode: 'analyze',
    scope: { include: [], exclude: [], description: 'target-based scope' },
    itemType: 'files',
    scansFiles: true,
    checkScope: CHECK_SCOPE,
    execute: async (ctx) => {
      const start = Date.now();
      const files = (await ctx.matchFiles()).filter((filePath) => isCandidateFile(filePath, ctx.cwd));
      const signals = await analyzeFiles(files, (filePath) => ctx.readFile(filePath), ctx.signal);
      return result(signals, files.length, Date.now() - start);
    },
  },
  getScope: () => ({ include: [], exclude: [], description: 'target-based scope' }),
  getMatcher: (cwd) => emptyMatcher(cwd),
  run: async (cwd, options = {}) => {
    const start = Date.now();
    const files = (options.targetFiles ? [...options.targetFiles] : await walkFiles(cwd)).filter(
      (filePath) => isCandidateFile(filePath, cwd),
    );
    const signals = await analyzeFiles(files, (filePath) => readFile(filePath, 'utf8'), options.signal);
    return result(signals, files.length, Date.now() - start);
  },
};

export const checks = [exampleCheck];
"
`;

exports[`init golden — polyglot (rust,typescript) > scaffolds per-language check files + the polyglot recipe slug list > poly/fit/recipes/example-recipe.mjs 1`] = `
"// Example fitness recipe — runs only the example check(s).
//
// Edit this file or add new .mjs files to opensip-cli/fit/recipes/.
// Files in this directory are auto-loaded on the next run.
//
// Run this recipe explicitly:  opensip fit --recipe example
//
// To run all enabled checks (built-in + your custom ones), omit
// --recipe and the built-in \`default\` recipe applies.
export const recipes = [{
  id: 'URCP_example',
  name: 'example',
  displayName: 'Example',
  description: 'Demo recipe — runs only the example check(s)',
  checks: { type: 'explicit', checkIds: ['example-check-rust', 'example-check-typescript'] },
  execution: { mode: 'parallel', stopOnFirstFailure: false, timeout: 30_000 },
  reporting: { format: 'table', verbose: false },
}];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > .gitignore 1`] = `
"opensip-cli/.runtime/
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > config.yml 1`] = `
"# OpenSIP CLI — project configuration
#
# Defines named target file sets for fitness checks. Each fitness
# check declares a \`scope\` (languages + concerns); discovery
# matches it against these targets to determine which files the
# check runs against.
#
# Docs: https://github.com/opensip-ai/opensip-cli#configuration

schemaVersion: 1

globalExcludes:
  - "**/node_modules/**"
  - "**/dist/**"

targets:
  typescript-source:
    description: TypeScript / TSX source code
    languages: [typescript]
    concerns: [backend]
    include:
      - "src/**/*.ts"
      - "src/**/*.tsx"
      - "packages/*/src/**/*.ts"
      - "packages/*/src/**/*.tsx"
    exclude:
      - "**/*.test.ts"
      - "**/*.test.tsx"
      - "**/__tests__/**"
      - "**/node_modules/**"
      - "**/dist/**"


# =============================================================================
# Fitness configuration
# =============================================================================

fitness:
  failOnErrors: 1     # fail if total errors >= this (0 = never fail on errors)
  failOnWarnings: 0   # fail if total warnings >= this (0 = warnings are informational)
  disabledChecks: []
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > fit/checks/example-check.mjs 1`] = `
"// Example fitness check.
//
// Edit this file or add new .mjs files to opensip-cli/fit/checks/.
// Files in this directory are auto-loaded on the next \`opensip fit\` run.
//
// This demo flags any file containing the literal \`EXAMPLE_TODO\`. After
// you confirm the wiring works, delete or replace it with a real check.
//
// Docs: https://github.com/opensip-ai/opensip-cli#authoring-a-check-package
import { readdir, readFile } from 'node:fs/promises';
import { join } from 'node:path';

const CHECK_ID = 'a3e1f8c4-9b2d-4f5a-8e6c-7d1a2b3c4d5e';
const CHECK_SLUG = 'example-check';
const CHECK_DESCRIPTION = 'Demo check — flags any file containing the literal EXAMPLE_TODO';
const CHECK_SCOPE = { languages: ['typescript'], concerns: ['backend'] };
const CHECK_TAGS = ['example'];
const SKIP_DIRS = new Set([
  '.git',
  '.hg',
  '.svn',
  '.turbo',
  '.next',
  'build',
  'coverage',
  'dist',
  'node_modules',
  'opensip-cli',
]);
const SOURCE_EXTENSIONS = [
  '.c',
  '.cc',
  '.cpp',
  '.cxx',
  '.go',
  '.java',
  '.js',
  '.jsx',
  '.mjs',
  '.py',
  '.rs',
  '.ts',
  '.tsx',
];

function normalizePath(filePath) {
  return filePath.replaceAll(String.fromCharCode(92), '/');
}

function hasSourceExtension(filePath) {
  return SOURCE_EXTENSIONS.some((extension) => filePath.endsWith(extension));
}

function projectPluginRoot(cwd) {
  return normalizePath(cwd).replace(/\\/+$/, '') + '/opensip-cli/';
}

function isCandidateFile(filePath, cwd) {
  const normalized = normalizePath(filePath);
  return !normalized.startsWith(projectPluginRoot(cwd)) && hasSourceExtension(normalized);
}

async function walkFiles(dir, cwd = dir) {
  const entries = await readdir(dir, { withFileTypes: true }).catch(() => []);
  const files = [];
  for (const entry of entries) {
    const fullPath = join(dir, entry.name);
    if (entry.isDirectory()) {
      if (SKIP_DIRS.has(entry.name)) continue;
      files.push(...(await walkFiles(fullPath, cwd)));
    } else if (entry.isFile() && isCandidateFile(fullPath, cwd)) {
      files.push(fullPath);
    }
  }
  return files;
}

function hashString(value) {
  let hash = 0;
  for (let i = 0; i < value.length; i += 1) {
    hash = (hash * 31 + value.charCodeAt(i)) >>> 0;
  }
  return hash.toString(36);
}

function warningSignal(filePath, line) {
  return {
    id: 'sig_' + hashString(CHECK_ID + filePath + String(line)),
    source: 'fitness',
    provider: 'opensip-cli',
    severity: 'medium',
    category: 'quality',
    ruleId: 'fit:' + CHECK_SLUG,
    message: 'Found the example trigger string.',
    suggestion:
      'This is just a demo. Delete this scaffolded example check once you have your own checks.',
    filePath,
    line,
    code: { file: filePath, line },
    metadata: { checkSlug: CHECK_SLUG, checkTags: CHECK_TAGS.join(',') },
    createdAt: new Date().toISOString(),
  };
}

async function analyzeFiles(files, read, signal) {
  const findings = [];
  for (const filePath of files) {
    if (signal?.aborted) throw new Error('Check aborted');
    const content = await read(filePath).catch(() => '');
    const index = content.indexOf('EXAMPLE_TODO');
    if (index < 0) continue;
    findings.push(warningSignal(filePath, content.slice(0, index).split('\\n').length));
  }
  return findings;
}

function result(signals, totalItems, durationMs) {
  const errors = signals.filter((s) => s.severity === 'critical' || s.severity === 'high').length;
  const warnings = signals.filter((s) => s.severity === 'medium').length;
  return {
    passed: errors === 0,
    errors,
    warnings,
    signals,
    info: {
      label: signals.length === 0 ? 'No EXAMPLE_TODO markers' : String(signals.length) + ' EXAMPLE_TODO marker(s)',
    },
    metadata: {
      totalItems,
      signals,
      durationMs,
      filesScanned: totalItems,
      itemType: 'files',
    },
  };
}

function emptyMatcher(cwd) {
  return {
    cwd,
    includePatterns: [],
    excludePatterns: [],
    files: async () => [],
    match: async () => ({ files: [], excluded: [], durationMs: 0 }),
    matches: () => false,
    withExcludes: () => emptyMatcher(cwd),
    typescriptOnly: () => emptyMatcher(cwd),
    noTests: () => emptyMatcher(cwd),
  };
}

const exampleCheck = {
  config: {
    id: CHECK_ID,
    slug: CHECK_SLUG,
    tags: CHECK_TAGS,
    description: CHECK_DESCRIPTION,
    analysisMode: 'analyze',
    scope: { include: [], exclude: [], description: 'target-based scope' },
    itemType: 'files',
    scansFiles: true,
    checkScope: CHECK_SCOPE,
    execute: async (ctx) => {
      const start = Date.now();
      const files = (await ctx.matchFiles()).filter((filePath) => isCandidateFile(filePath, ctx.cwd));
      const signals = await analyzeFiles(files, (filePath) => ctx.readFile(filePath), ctx.signal);
      return result(signals, files.length, Date.now() - start);
    },
  },
  getScope: () => ({ include: [], exclude: [], description: 'target-based scope' }),
  getMatcher: (cwd) => emptyMatcher(cwd),
  run: async (cwd, options = {}) => {
    const start = Date.now();
    const files = (options.targetFiles ? [...options.targetFiles] : await walkFiles(cwd)).filter(
      (filePath) => isCandidateFile(filePath, cwd),
    );
    const signals = await analyzeFiles(files, (filePath) => readFile(filePath, 'utf8'), options.signal);
    return result(signals, files.length, Date.now() - start);
  },
};

export const checks = [exampleCheck];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > fit/recipes/example-recipe.mjs 1`] = `
"// Example fitness recipe — runs only the example check(s).
//
// Edit this file or add new .mjs files to opensip-cli/fit/recipes/.
// Files in this directory are auto-loaded on the next run.
//
// Run this recipe explicitly:  opensip fit --recipe example
//
// To run all enabled checks (built-in + your custom ones), omit
// --recipe and the built-in \`default\` recipe applies.
export const recipes = [{
  id: 'URCP_example',
  name: 'example',
  displayName: 'Example',
  description: 'Demo recipe — runs only the example check(s)',
  checks: { type: 'explicit', checkIds: ['example-check'] },
  execution: { mode: 'parallel', stopOnFirstFailure: false, timeout: 30_000 },
  reporting: { format: 'table', verbose: false },
}];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > sim/recipes/example-recipe.mjs 1`] = `
"// Example simulation recipe — runs only the example scenario.
//
// Edit this file or add new .mjs files to opensip-cli/sim/recipes/.
// Files in this directory are auto-loaded on the next run.
//
// Run this recipe explicitly:  opensip sim --recipe example

export const recipes = [
  {
    id: 'URCP_sim_example',
    name: 'example',
    displayName: 'Example',
    description: 'Demo recipe — runs only the example scenario',
    scenarios: { type: 'explicit', scenarioIds: ['example-scenario'] },
    execution: { mode: 'parallel', timeout: 30_000 },
  },
];
"
`;

exports[`init golden — single language (typescript) > scaffolds the exact fit+sim layout, config bytes, ids, .gitignore, and dirs > sim/scenarios/example-scenario.mjs 1`] = `
"// Example simulation scenario — a real load window against an in-process target.
//
// 'sim' is a standalone driver: you bring the target. This demo keeps the
// generated file dependency-free so it runs immediately after \`opensip init\`,
// while still returning the same load-kind result shape the helper API emits.
// To test YOUR service, replace the body of run() with calls to a target you own.
//
// Edit this file or add new .mjs files to opensip-cli/sim/scenarios/.
// Files in this directory are auto-loaded on the next \`opensip sim\` run.
//
// Docs: https://github.com/opensip-ai/opensip-cli#simulation

const LOW_ERROR_RATE = {
  metric: 'error_rate',
  operator: 'lt',
  value: 0.05,
  message: 'Error rate must be < 5.0%',
};

const LOW_P95_LATENCY = {
  metric: 'p95_latency_ms',
  operator: 'lt',
  value: 500,
  message: 'P95 latency must be < 500ms',
};

function sleep(ms, abortSignal) {
  return new Promise((resolve, reject) => {
    if (abortSignal.aborted) {
      reject(new Error('Scenario aborted'));
      return;
    }
    let settled = false;
    let timer;
    const finish = () => {
      if (settled) return;
      settled = true;
      abortSignal.removeEventListener('abort', abort);
      resolve();
    };
    const abort = () => {
      if (settled) return;
      settled = true;
      clearTimeout(timer);
      reject(new Error('Scenario aborted'));
    };
    timer = setTimeout(finish, ms);
    abortSignal.addEventListener('abort', abort, { once: true });
  });
}

function percentile(values, ratio) {
  if (values.length === 0) return 0;
  const sorted = [...values].sort((a, b) => a - b);
  const index = Math.min(sorted.length - 1, Math.floor(sorted.length * ratio));
  return sorted[index] ?? 0;
}

export const scenarios = [
  {
    kind: 'load',
    id: 'example-scenario',
    name: 'example-scenario',
    description: 'Demo load scenario — drives a trivial in-process target',
    tags: ['example'],
    async run(abortSignal) {
      const startedAt = Date.now();
      const latencies = [];

      for (let i = 0; i < 20; i += 1) {
        const requestStartedAt = Date.now();
        await sleep(5, abortSignal);
        latencies.push(Date.now() - requestStartedAt);
        await sleep(10, abortSignal);
      }

      const totalRequests = latencies.length;
      const avgLatencyMs =
        totalRequests === 0
          ? 0
          : latencies.reduce((sum, latency) => sum + latency, 0) / totalRequests;
      const metrics = {
        totalRequests,
        successfulRequests: totalRequests,
        failedRequests: 0,
        avgLatencyMs,
        p50LatencyMs: percentile(latencies, 0.5),
        p95LatencyMs: percentile(latencies, 0.95),
        p99LatencyMs: percentile(latencies, 0.99),
        errorsGenerated: 0,
      };

      return {
        kind: 'load',
        scenarioId: 'example-scenario',
        passed: true,
        durationMs: Date.now() - startedAt,
        signals: [],
        outcome: {
          metrics,
          assertions: {
            passed: [LOW_ERROR_RATE, LOW_P95_LATENCY],
            failed: [],
          },
        },
      };
    },
  },
];
"
`;

exports[`init golden — single language (typescript) > the config contains the host-rendered fitness: block (Phase 3 must reproduce it) > fitness-block 1`] = `
"fitness:
  failOnErrors: 1     # fail if total errors >= this (0 = never fail on errors)
  failOnWarnings: 0   # fail if total warnings >= this (0 = warnings are informational)
  disabledChecks: []
"
`;
